[package]
name = "witty"
version = "0.1.0"
authors = ["Stanko Krtalić Rusendić <stanko.krtalic@gmail.com>"]
description = "wit.ai client library"
documentation = "https://github.com/Stankec/witty"
homepage = "https://github.com/Stankec/witty"
repository = "https://github.com/Stankec/witty"
readme = "README.md"
keywords = ["wit", "bot", "natural", "language"]
categories = ["api-bindings", "parsing", "text-processing"]
license = "MIT"
license-file = "LICENSE.txt"


[dependencies]
hyper = "0.10.4"
hyper-native-tls = "0.2.2"
serde = "0.9.7"
serde_json = "0.9.6"
serde_derive = "0.9.7"
serde_urlencoded = "0.4.2"
